--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "jest": "^21.0.1",
     "jsdom": "^11.2.0",
+    "path-to-regexp": "^6.2.0",
     "vue": "^2.4.2"
   }
 }
